# ERP_Project

./: .env.example  .gitignore  CHANGELOG.md  ERD-DIAGRAMS.md  README.md  alembic.ini  creddetails.txt  pyproject.toml  pytest.ini  requirements.txt
alembic/: env.py  script.py.mako
alembic/versions/: 20260301_0001_add_refresh_tokens.py  20260301_0002_add_oauth_states.py  20260301_0003_add_sales_document_control_fields.py  20260302_0004_add_quotation_terms_settings.py  20260303_0005_add_purchase_supplier_quality_controls.py  20260303_0006_add_stores_module_tables.py  20260304_0007_add_storage_locations_and_links.py  20260304_0008_add_grn_receiving_traceability_fields.py  20260304_0009_add_batch_traceability_check_constraint.py  20260304_0010_add_route_card_document_fields.py  20260305_0011_add_po_document_path_to_purchase_orders.py  20260305_0012_add_supplier_quality_requirements_to_purchase_orders.py  20260305_0013_merge_heads_0010_0012.py  (+5 more)
app/: __init__.py  main.py
docs/: purchase-erd.md  sales-erd.md
scripts/: qa-all.ps1  run_full_erp_tests.py  start-api-dev.ps1
tests/: test_admin_features.py  test_alerts.py  test_api_performance.py  test_auth.py  test_complete_erp_system.py  test_concurrent_operations.py  test_dispatch.py  test_dispatch_business_rules.py  test_dispatch_pdf.py  test_dispatch_roles.py  test_engineering.py  test_full_system_flow.py  test_maintenance.py  test_pdf_documents.py  test_production.py  test_production_reports.py  test_purchase.py  test_roles.py  test_sales.py  test_security.py  test_stores.py  test_traceability_flow.py  test_users.py
(+115 files in other folders)
